<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="120dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/cardView"
        app:cardElevation="2dp"
        app:cardCornerRadius="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginBottom="2dp"
        app:cardUseCompatPadding="true">

        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="2dp"
                android:background="@drawable/rounded_background"
                android:padding="6dp"
                android:gravity="start"
                android:orientation="horizontal">

        <ImageView
            android:id="@+id/productImage"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginEnd="2dp"
            android:maxWidth="100dp"
            android:contentDescription="@string/prodImage"
            app:srcCompat="@drawable/wireless_earbuds" />

            <TextView
                android:id="@+id/prodName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxWidth="180dp"
                android:layout_toStartOf="@id/delete"
                android:layout_toEndOf="@id/productImage"
                android:textSize="16sp"
                android:textStyle="bold"
                android:ellipsize="end"
                android:singleLine="true"
                android:text="@string/prodName" />

            <TextView
                android:id="@+id/description"
                android:layout_width="230dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/prodName"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="36dp"
                android:layout_toEndOf="@id/productImage"
                android:ellipsize="end"
                android:maxLines="2"
                android:textSize="12sp"
                android:text="@string/prodDesc" />

            <TextView
                android:id="@+id/dollarSign"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_toEndOf="@id/productImage"
                android:textSize="18sp"
                android:text="@string/dollarSign" />

            <TextView
                android:id="@+id/price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_toEndOf="@id/dollarSign"
                android:textSize="18sp"
                android:text="@string/prodPrice" />

            <Button
                android:id="@+id/delete"
                android:layout_width="72dp"
                android:layout_height="48dp"
                android:layout_alignParentEnd="true"
                android:gravity="end|top"
                android:background="#00000000"
                android:padding="0dp"
                android:textSize="12sp"
                android:textColor="#C30F02"
                android:text="@string/deleteBtn"/>

        </RelativeLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>